<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PlayerActivity">

    <item
        android:id="@+id/player_menu_add_ringtone"
        android:title="@string/string_player_menu_add_ringtone"
        app:showAsAction="never"/>

    <item
        android:id="@+id/player_menu_add_particular_ringtone"
        android:title="@string/string_player_menu_add_particular_ringtone"
        app:showAsAction="never"/>

    <item
        android:id="@+id/player_menu_share_song"
        android:title="@string/string_player_menu_share_song"
        app:showAsAction="never"/>

    <item
        android:id="@+id/player_menu_delete_song"
        android:title="@string/string_player_menu_delete_song"
        app:showAsAction="never"/>
</menu>