<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:fontFamily="sans-serif"
        android:text="@string/settings_grant_permissions"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/settings_grant_permissions_write_storage_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="4dp"
            android:text="@string/settings_grant_permissions_write_storage"/>

        <TextView
            android:id="@+id/settings_grant_permissions_write_settings_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="4dp"
            android:text="@string/settings_grant_permissions_write_settings"/>


        <TextView
            android:id="@+id/settings_grant_permissions_read_storage_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="4dp"
            android:text="@string/settings_grant_permissions_read_storage"/>


        <TextView
            android:id="@+id/settings_grant_permissions_read_contacts_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="4dp"
            android:text="@string/settings_grant_permissions_read_contacts"/>


    </LinearLayout>

</LinearLayout>