<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:fontFamily="sans-serif"
        android:text="@string/settings_grant_permissions"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/settings_change_themes_violet_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="4dp"
            android:text="@string/settings_change_theme_violet"/>

        <TextView
            android:id="@+id/settings_change_themes_bluish_green_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="4dp"
            android:text="@string/settings_change_theme_bluish_green"/>

        <TextView
            android:id="@+id/settings_change_themes_crimson_blue_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="4dp"
            android:text="@string/settings_change_theme_crimson_blue"/>

    </LinearLayout>

</LinearLayout>