<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="64dp"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    android:layout_margin="2dp"
    android:background="@android:color/transparent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:background="@android:color/transparent">

        <TextView
            android:id="@+id/album_artist_song_list_track_number_listItem"
            android:layout_width="50dp"
            android:layout_height="64dp"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/sample_string_song_track_number"
            android:background="@android:color/transparent" />
        <TextView
            android:id="@+id/album_artist_list_song_name_listItem"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="64dp"
            android:text="@string/sample_string_song_title"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:maxLines="2"
            android:ellipsize="end"
            android:paddingStart="8sp"
            android:paddingEnd="8sp"
            android:gravity="center_vertical"
            android:textColor="@android:color/black"
            android:background="@android:color/transparent"/>
        <TextView
            android:id="@+id/album_artist_song_list_track_duration_listItem"
            android:layout_width="100dp"
            android:layout_height="64dp"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/sample_string_song_total_Duration"
            android:background="@android:color/transparent"
            />
    </LinearLayout>
</android.support.v7.widget.CardView>