<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/player_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/temporary_player_background_2">

        <LinearLayout
            android:id="@+id/player_song_detail_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/player_song_title"
                android:textSize="24sp"
                android:text="@string/sample_string_song_title"
                style="@style/PlayerTitleArtistNameCustomStyle" />

            <TextView
                android:id="@+id/player_song_artist_name"
                android:layout_below="@id/player_song_title"
                android:textSize="18sp"
                android:text="@string/sample_string_song_artist_name"
                style="@style/PlayerTitleArtistNameCustomStyle" />
        </LinearLayout>

        <TextView
            android:id="@+id/player_current_duration"
            android:layout_above="@id/player_duration_seekBar"
            android:layout_alignParentStart="true"
            android:text="@string/sample_string_song_current_duration"
            style="@style/PlayerDurationCustomStyle" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_above="@id/player_duration_seekBar"
            android:layout_centerHorizontal="true">

            <ImageButton
                android:id="@+id/player_repeat_shuffle_imageButton"
                android:src="@drawable/round_shuffle_white_18dp"
                style="@style/CustomButtonDrawerStyle"/>

            <ImageButton
                android:id="@+id/player_show_lyrics_imageButton"
                android:src="@drawable/round_sort_white_18dp"
                android:layout_marginStart="12dp"
                style="@style/CustomButtonDrawerStyle"/>

            <ImageButton
                android:id="@+id/player_favourites_imageButton"
                android:src="@drawable/baseline_favorite_border_white_18dp"
                android:layout_marginStart="12dp"
                style="@style/CustomButtonDrawerStyle"/>


        </LinearLayout>

        <TextView
            android:id="@+id/player_total_duration"
            android:layout_above="@id/player_duration_seekBar"
            android:layout_alignParentEnd="true"
            android:text="@string/sample_string_song_total_Duration"
            style="@style/PlayerDurationCustomStyle" />

        <ScrollView
            android:id="@+id/player_lyrics_container_scrollView"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/player_song_detail_container"
            android:visibility="invisible">

            <TextView
                android:id="@+id/player_song_lyrics_textView"
                android:layout_width="280dp"
                android:layout_height="280dp"
                android:textSize="18dp"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                />

        </ScrollView>

        <ImageView
            android:id="@+id/player_song_thumbnail"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:src="@drawable/song_default_thumbnail"
            android:scaleType="centerCrop"
            android:padding="8dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/player_song_detail_container"
            android:visibility="visible"/>

        <!-- <android.support.v4.view.ViewPager
            android:id="@+id/player_song_thumbnail_lyrics_viewPager"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:src="@drawable/song_default_thumbnail"
            android:scaleType="centerCrop"
            android:padding="8dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/player_song_detail_container"/> -->

        <LinearLayout
            android:id="@+id/player_button_drawer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/player_fast_rewind_imageButton"
                android:src="@drawable/round_fast_rewind_white_24dp"
                style="@style/CustomButtonDrawerStyle"/>

            <ImageButton
                android:id="@+id/player_skip_previous_imageButton"

                android:src="@drawable/round_navigate_before_white_36dp"
                style="@style/CustomButtonDrawerStyle"/>

            <ImageButton
                android:id="@+id/player_play_pause_imageButton"
                android:src="@drawable/round_play_circle_outline_white_48dp"
                android:visibility="visible"
                style="@style/CustomButtonDrawerStyle"/>


            <ImageButton
                android:id="@+id/player_skip_next_imageButton"
                android:src="@drawable/round_navigate_next_white_36dp"
                style="@style/CustomButtonDrawerStyle"/>

            <ImageButton
                android:id="@+id/player_fast_forward_imageButton"
                android:src="@drawable/round_fast_forward_white_24dp"
                style="@style/CustomButtonDrawerStyle"/>
        </LinearLayout>

        <SeekBar
            android:id="@+id/player_duration_seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/player_button_drawer"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

</LinearLayout>

